--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,123 @@
+html,
 body {
-    padding-top: 60px;
-    padding-bottom: 40px;
+    width: 100%;
+    height: 100%;
 }
 
-.zf-green {
-    color: #68b604;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.btn-success {
-    background-color: #57a900;
-    background-image: -moz-linear-gradient(top, #70d900, #57a900);
-    background-image: -ms-linear-gradient(top, #70d900, #57a900);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#70d900), to(#57a900));
-    background-image: -webkit-linear-gradient(top, #70d900, #57a900);
-    background-image: -o-linear-gradient(top, #70d900, #57a900);
-    background-image: linear-gradient(top, #70d900, #57a900);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70d900', endColorstr='#57a900', GradientType=0);
+body {
+    font-family: "Raleway", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-attachment: fixed;
 }
 
-.btn-success:hover,
-.btn-success:active,
-.btn-success.active,
-.btn-success.disabled,
-.btn-success[disabled] {
-    background-color: #57a900;
+.right-part {
+    width: 90%;
+    position: relative;
+    left: 10%;
+    padding-top: 30px;
+    min-height: 100%;
 }
 
-div.container a.navbar-brand > img {
-    display: inline;
-    margin-right: 4px;
-    margin-top: -2px;
+header {
+    min-height: 10vh;
+    text-align: center;
+    padding: 2.5vh 2.5vw;
+    color: darkgray;
+}
+
+header > h1 {
+    text-transform: uppercase;
+}
+
+main {
+    width: 100%;
+    text-align: center;
+    min-height: 79vh;
+    padding-bottom: 60px;
+}
+
+main > h2 {
+    margin: 0;
+    padding: 10px;
+    margin-bottom: 30px;
+    color: white;
+}
+
+nav {
+    width: 10%;
+    background-color: #222;
+    position: fixed;
+    top: 0;
+    height: 100%;
+}
+
+nav ul {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    margin-top: 50px;
+    list-style-type: none;
+}
+
+nav li {
+    width: 100%;
+    line-height: 40px;
+}
+
+nav li > a {
+    display: block;
+    padding-left: 30px;
+    padding-right: 10px;
+}
+
+.reduced {
+    height: 40px;
+    line-height: 1.2em;
+}
+
+nav li > h1 {
+    color: white;
+    text-align: center;
+}
+
+nav li > a:hover {
+    background: rgba(255, 255, 255, 0.2);
+    padding-left: 30px;
+}
+
+nav a, nav a:hover {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+nav ul li > span.glyphicon {
+    float: left;
+    color: whitesmoke;
+    margin-top: 12px;
+    padding-left: 12px;
+    display: none;
+}
+
+nav ul li:hover > span.glyphicon {
+    display: block;
+}
+
+.datatable {
+    border-collapse: collapse;
+    margin: 0 auto;
+}
+
+.datatable th {
+    background: black;
+    text-align:center;
+    color: white;
+    border: 0;
+    cursor: pointer;
+    position: relative;
+    padding: 7px 20px 7px 7px;
 }
