--- a/module/Application/view/application/index/removefromcart.phtml
+++ b/module/Application/view/application/index/removefromcart.phtml
@@ -1,20 +1,21 @@
 <?php
 
-$title = 'Ajouter au paniers';
+$title = 'Retirer du panier';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 
-<p>Ajouter ce produit au panier ?
-    <?php echo $this->escapeHtml($product->_name); ?> ?
+<p>Êtes vous sur de vouloir supprimer
+    <?php echo $this->escapeHtml($product->_name); ?>
+    de votre panier ?
 </p>
 <?php
 $url = $this->url('index', array(
-    'action' => 'addtocart',
+    'action' => 'removefromcart',
     'id'     => $this->id,
 ));
 ?>
-<form action="/addtocart/<?= $product->_id ?>" method="post">
+<form action="/removefromcart/<?= $product->_id ?>" method="post">
     <div>
         <input type="hidden" name="id" value="<?php echo (int) $product->_id; ?>" />
         <input type="submit" name="del" value="Yes" />
